kubernetes/dev/deployment-canary.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-service-canary
  namespace: applications
  labels:
    app: flask-demo-service
    track: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-demo-service
      track: canary
  template:
    metadata:
      labels:
        app: flask-demo-service
        track: canary
        version: "v1.1.0-canary"
    spec:
      containers:
        - name: demo-service
          image: tovtoc/demo-services:canary
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /liveness
              port: 5000
            initialDelaySeconds: 1
            timeoutSeconds: 2
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readyness
              port: 5000
            initialDelaySeconds: 3
            timeoutSeconds: 5
            periodSeconds: 60
            failureThreshold: 3
      imagePullSecrets:
        - name: ecr
