kubernetes/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-service-stable
  namespace: applications
  labels:
    app: flask-demo-service
    track: stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-demo-service
      track: stable
  template:
    metadata:
      labels:
        app: flask-demo-service
        track: stable
        version: "v1.0.0"
    spec:
      containers:
        - name: demo-service
          image: ${IMAGE_URL} # ${IMAGE_URL}:stable Kustomize and use env var
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /liveness
              port: 5000
            initialDelaySeconds: 1
            timeoutSeconds: 2
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readyness
              port: 5000
            initialDelaySeconds: 3
            timeoutSeconds: 5
            periodSeconds: 60
            failureThreshold: 3
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
