kubernetes/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-demo-ingress
  namespace: applications
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /flask-demo(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask-demo-service
            port:
              number: 80
